Fix spacing bug due to beta banner removal and trying to fix bug with showing layer palette on mobile

--- a/app/styles/layouts/_l-default.scss
+++ b/app/styles/layouts/_l-default.scss
@@ -132,7 +132,7 @@ body.index {
   }
 
   @include breakpoint(large) {
-    margin-top: 5.25rem;
+    margin-top: 6.5rem;
     order: 1;
     width: 15rem;
     box-shadow: 2px 0 0 rgba(0,0,0,0.1);
